tests/snapshots/ngl_all__ngl_tc_old_komm_heiliger_geist_qt.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 60
Beam: 382
BeginPage: 3
Brace: 11
ConnectorLine: 11
EndPage: 3
LedgerLine: 224
MusicChar: 1099
NoteStem: 842
SetMusicSize: 44
SetWidths: 1
Slur: 60
Staff: 33
TextString: 2
TOTAL: 2775

=== STAVES ===
y=63.0 x=[100.0..558.0] lines=5 spacing=4.00
y=103.0 x=[100.0..558.0] lines=5 spacing=4.00
y=143.0 x=[100.0..558.0] lines=5 spacing=4.00
y=254.0 x=[54.0..558.0] lines=5 spacing=4.00
y=294.0 x=[54.0..558.0] lines=5 spacing=4.00
y=334.0 x=[54.0..558.0] lines=5 spacing=4.00
y=436.0 x=[54.0..558.0] lines=5 spacing=4.00
y=476.0 x=[54.0..558.0] lines=5 spacing=4.00
y=516.0 x=[54.0..558.0] lines=5 spacing=4.00
y=610.0 x=[54.0..558.0] lines=5 spacing=4.00
y=650.0 x=[54.0..558.0] lines=5 spacing=4.00
y=690.0 x=[54.0..558.0] lines=5 spacing=4.00
y=63.0 x=[54.0..558.0] lines=5 spacing=4.00
y=103.0 x=[54.0..558.0] lines=5 spacing=4.00
y=143.0 x=[54.0..558.0] lines=5 spacing=4.00
y=259.0 x=[54.0..558.0] lines=5 spacing=4.00
y=299.0 x=[54.0..558.0] lines=5 spacing=4.00
y=339.0 x=[54.0..558.0] lines=5 spacing=4.00
y=444.0 x=[54.0..558.0] lines=5 spacing=4.00
y=484.0 x=[54.0..558.0] lines=5 spacing=4.00
y=524.0 x=[54.0..558.0] lines=5 spacing=4.00
y=618.0 x=[54.0..558.0] lines=5 spacing=4.00
y=658.0 x=[54.0..558.0] lines=5 spacing=4.00
y=698.0 x=[54.0..558.0] lines=5 spacing=4.00
y=63.0 x=[54.0..558.0] lines=5 spacing=4.00
y=103.0 x=[54.0..558.0] lines=5 spacing=4.00
y=143.0 x=[54.0..558.0] lines=5 spacing=4.00
y=235.0 x=[54.0..558.0] lines=5 spacing=4.00
y=275.0 x=[54.0..558.0] lines=5 spacing=4.00
y=315.0 x=[54.0..558.0] lines=5 spacing=4.00
y=409.0 x=[54.0..558.0] lines=5 spacing=4.00
y=449.0 x=[54.0..558.0] lines=5 spacing=4.00
y=489.0 x=[54.0..558.0] lines=5 spacing=4.00

=== BARLINES: 60 total ===

=== BEAMS: 382 total ===

=== STEMS: 842 total ===

=== SLURS: 60 total ===

=== GLYPHS ===
Smufl(57424): 15
Smufl(57442): 24
Smufl(57482): 3
Smufl(57506): 12
Smufl(57507): 19
Smufl(57508): 823
Smufl(57831): 10
Smufl(57920): 12
Smufl(57921): 26
Smufl(57922): 2
Smufl(57923): 8
Smufl(57952): 58
Smufl(57953): 32
Smufl(57954): 10
Smufl(58595): 11
Smufl(58596): 3
Smufl(58597): 2
Smufl(58598): 22
Smufl(58599): 7
