tests/snapshots/ngl_all__ngl_tc_old_pm_calypso.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 8
Beam: 19
BeginPage: 1
Brace: 2
ConnectorLine: 2
EndPage: 1
LedgerLine: 2
MusicChar: 76
NoteStem: 49
SetMusicSize: 4
SetWidths: 1
Slur: 5
Staff: 4
TextString: 1
TOTAL: 175

=== STAVES ===
y=60.0 x=[92.0..558.0] lines=5 spacing=4.00
y=100.0 x=[92.0..558.0] lines=5 spacing=4.00
y=164.0 x=[45.0..558.0] lines=5 spacing=4.00
y=204.0 x=[45.0..558.0] lines=5 spacing=4.00

=== BARLINES: 8 total ===

=== BEAMS: 19 total ===

=== STEMS: 49 total ===

=== SLURS: 5 total ===

=== GLYPHS ===
Smufl(57424): 2
Smufl(57442): 2
Smufl(57476): 4
Smufl(57506): 8
Smufl(57507): 2
Smufl(57508): 47
Smufl(57813): 1
Smufl(57831): 1
Smufl(57921): 5
Smufl(58598): 4
