tests/snapshots/ngl_all__ngl_tc_schildt.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 18
Beam: 20
BeginPage: 1
EndPage: 1
LedgerLine: 28
MusicChar: 155
NoteStem: 112
SetMusicSize: 4
SetWidths: 1
Slur: 5
Staff: 4
TextString: 2
TOTAL: 351

=== STAVES ===
y=60.1 x=[36.0..567.0] lines=5 spacing=4.00
y=113.8 x=[36.0..567.0] lines=5 spacing=4.00
y=185.1 x=[36.0..567.0] lines=5 spacing=4.00
y=238.8 x=[36.0..567.0] lines=5 spacing=4.00

=== BARLINES: 18 total ===

=== BEAMS: 20 total ===

=== STEMS: 112 total ===

=== SLURS: 5 total ===

=== GLYPHS ===
Smufl(57424): 2
Smufl(57442): 2
Smufl(57506): 8
Smufl(57507): 32
Smufl(57508): 80
Smufl(57831): 4
Smufl(57920): 3
Smufl(57921): 1
Smufl(57954): 5
Smufl(59523): 18
